# haikuincidence

./: .env_template  .flake8  .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  app.py  config_template.ini  data_base.py  data_tweets_haiku.py  data_utils.py  environment.yml  haiku_utils.py  haikuincidence.service  main.py  pyproject.toml  python_env_setup.sh  requirements-dev.txt  requirements.txt  text_utils.py
.github/workflows/: code_quality.yaml  deploy.yaml
data/: emoticons.txt  ignore.txt  ignore_profile.txt  ignore_template.txt  ignore_tweet.txt  syllables.json  track_template.txt
haikuincidence/: app.py
haikuincidence/data/: emoticons.txt
haikuincidence/utils/: data_base.py  data_utils.py  haiku_utils.py  text_utils.py
scripts/: check_syllables.py  test_syllables.py  tweets_followers.py
tests/: data_haiku.txt  data_not_haiku.txt  data_process.txt  data_profile_fail.txt  data_profile_pass.txt  test_process.py  test_profile.py  test_syllables.py
utils/: data_base.py  data_tweets_haiku.py  data_utils.py  haiku_utils.py  text_utils.py
