[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "haikuincidence"
version = "0.1.0"
description = "Find tweets that contain coincidental haikus and tweet these beautiful poems"
authors = ["Matt Mollison <matt.mollison@gmail.com>"]

[tool.poetry.dependencies]
emoji = "~1.7.0"
ftfy = "~6.1.1"
inflect = "~5.6.0"
nltk = "~3.7.0"
psycopg2-binary = "~2.9.3"
python-dotenv = "~0.20.0"
pytz = "~2022.1"
python = ">=3.9,<3.10"
sqlalchemy = "~1.4.36"
twython = "~3.9.1"
unidecode = "~1.3.4"

[tool.poetry.dev-dependencies]
black = "~22.3.0"
flake8 = "~4.0.1"
isort = "~5.10.1"
mypy = "~0.960"
pytest = "~7.1.2"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
