[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "haikuincidence"
version = "0.1.0"
description = "Find tweets that contain coincidental haikus and tweet these poems"
authors = ["Matt Mollison <matt.mollison@gmail.com>"]

[tool.poetry.dependencies]
emoji = "^2.1.0"
ftfy = "^6.1.1"
inflect = "^6.0.0"
nltk = "^3.7.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"
pytz = "^2022.2.1"
python = ">=3.10,<3.11"
sqlalchemy = "^1.4.41"
tenacity = "^8.1.0"
twython = "^3.9.1"
unidecode = "^1.3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
ipdb = "^0.13.9"
mypy = "^0.971"
pytest = "^7.1.3"

[tool.black]
line-length = 88
preview = true

[tool.isort]
profile = "black"
