[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "haikuincidence"
version = "0.1.0"
description = "Find tweets that contain coincidental haikus and tweet these poems"
authors = ["Matt Mollison <matt.mollison@gmail.com>"]

[tool.poetry.dependencies]
emoji = "^2.2.0"
ftfy = "^6.1.1"
inflect = "^6.0.2"
nltk = "^3.8.1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
pytz = "^2022.7.1"
python = ">=3.10,<3.11"
sqlalchemy = "^1.4.46"
tenacity = "^8.1.0"
twython = "^3.9.1"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
# flake8 = "^5.0.4"
ipdb = "^0.13.11"
# isort = "^5.10.1"
mypy = "^0.991"
pytest = "^7.2.1"
ruff = "^0.0.241"

[tool.black]
line-length = 88
preview = true

# [tool.isort]
# profile = "black"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # McCabe complexity
    "C90",
    # isort
    "I",
    # pandas-vet
    "PD",
    # pep8-naming
    "N",
    # flake8-quotes
    "Q",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
    # Ruff-specific rules
    "RUF",
    # # flake8-builtins
    # "A",
    # # pydocstyle
    # "D",
    # # flake8-logging-format
    # "G",
    # # flake8-datetimez
    # "DTZ",
    # # flake8-use-pathlib
    # "PTH",
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["F", "E", "W", "B", "C4", "I", "PD", "N", "Q", "SIM", "UP", "RUF"]
unfixable = []

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 26
